--- a/views/partials/bookCard-related.ejs
+++ b/views/partials/bookCard-related.ejs
@@ -1,5 +1,5 @@
-<a href="/book">
-   <img src="<%= book.cover %>" alt="<%= book.title %>"/>
+<a href="/book/<%= book._id %>">
+   <img src="/assets/images/placeholder.png" alt="<%= book.title %>"/>
    <h3> <%= book.title %> </h3>
    <p> <%= book.author %> </p>
 </a>
