--- a/public/styles/cartPage.css
+++ b/public/styles/cartPage.css
@@ -61,7 +61,7 @@ main {
 }
 
 .cart-items {
-   max-height: 350px;
+   max-height: 450px;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
@@ -289,4 +289,13 @@ main {
    color: var(--text-color);
    font-size: 0.75rem;
    font-weight: bold;
+}
+
+.name-error, .surname-error, .phone-number-error, .address-error, .city-error, .zip-code-error, .country-error {
+   margin-top: -.5rem;
+   margin-bottom: -.5rem;
+   color: var(--error-color);
+   font-size: 1rem;
+   font-weight: 400;
+   min-height: 1.5em;
 }
