--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -238,6 +238,17 @@ footer > div {
    border-radius: 50%;
 }
 
+.header > div > .not-logged .button-primary:not(#theme-toggle) {
+   background-color: var(--secondary-color);
+   padding: .75rem 1.25rem;
+   transition: background-color .3s ease;
+}
+
+.header > div > nav .button-primary:hover {
+   opacity: 1;
+   background-color: var(--accent-color);
+}
+
 .header > div > nav button img {
    width: 100%;
    height: 100%;
