--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,15 @@
 <header class="header">
    <div>
       <a href="/explore" class="p-big">
-         <img src="assets/svg/logo.svg" alt="BookHaven Logo" class="logo icon"> BookHaven
+         <img src="/assets/svg/logo.svg" alt="BookHaven Logo" class="logo icon"> BookHaven
       </a>
    </div>
    <div class="search-input">
       <input type="text" placeholder="Search for books" class="input-search">
-      <img src="assets/svg/search.svg" alt="Search Icon" class="icon">
+      <img src="/assets/svg/search.svg" alt="Search Icon" class="icon">
    </div>
    <div>
+      <% if(isAuthenticated) { %>
       <nav>
          <ul>
             <li>
@@ -16,23 +17,39 @@
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" width="24" height="24">
                      <path id="sun" stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
                      <path id="moon" stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
-                   </svg>
+                     </svg>
                </button>
             </li>
             <li>
                <a href="/wishlist"> 
-                  <img src="assets/svg/bookmark.svg" alt="bookmark icon" class="icon">
+                  <img src="/assets/svg/bookmark.svg" alt="bookmark icon" class="icon">
                </a>
             </li>
             <li>
                <a href="/cart"> 
-                  <img src="assets/svg/cart.svg" alt="cart icon" class="icon">
+                  <img src="/assets/svg/cart.svg" alt="cart icon" class="icon">
                </a>
             </li>
             <button class="profile-button">
-               <img src="assets/images/placeholder.png" alt="user avatar"/>
+               <img src="/assets/images/placeholder.png" alt="user avatar"/>
             </button>
          </ul>
       </nav>
+      <% } else { %>
+      <nav class="not-logged">
+         <ul>
+            <li>
+               <button id="theme-toggle" class="button-primary">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6" width="24" height="24">
+                     <path id="sun" stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+                     <path id="moon" stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
+                     </svg>
+               </button>
+            </li>
+            <li><a href="/signin" class="button-primary"> Sign In </a></li>
+            <li><a href="/signup" class="button-primary"> Sign Up </a></li>
+         </ul>
+      </nav>
+      <% } %>
    </div>
 </header>
